# ESP32_S3_EMS

./: .gitignore  README.md  TODO.md  spec.md
docs/: README.md
docs/development/: DEPENDENCIES.md  DOCUMENTO_MESTRE.md  FASE_3_IMPLEMENTADA.md  IMPROVEMENTS_SUMMARY.md  PCNT_IMPLEMENTATION.md  PHASE_2_3_4_SUMMARY.md
docs/development/MODULOS/: engine_control.md  sensors.md  sync.md
docs/testing/TESTES/: testes_modulos.md
firmware/: CMakeLists.txt
firmware/s3/: CMakeLists.txt  sdkconfig.old
firmware/s3/components/engine_control/: CMakeLists.txt
firmware/s3/components/engine_control/include/: fuel_calc.h  fuel_injection.h  high_precision_timing.h  hp_state.h  ignition_timing.h  mcpwm_ignition.h  mcpwm_ignition_hp.h  mcpwm_injection_hp.h  p4_control_config.h  s3_control_config.h  safety_monitor.h
firmware/s3/components/engine_control/src/: cli_interface.c  data_logger.c  espnow_link.c  high_precision_timing.c  hp_state.c  mcpwm_ignition.c  mcpwm_ignition_hp.c  mcpwm_injection.c  mcpwm_injection_hp.c  safety_monitor.c  sensor_processing.c  sync.c  tuning_protocol.c  twai_lambda.c
firmware/s3/components/engine_control/src/control/: engine_control.c  fuel_calc.c  fuel_injection.c  fuel_injection_hp.c  ignition_timing.c  ignition_timing_hp.c  table_16x16.c
firmware/s3/main/: main.c
legacy/: README.md
legacy/firmware/c6/: CMakeLists.txt  sdkconfig
legacy/firmware/p4/: CMakeLists.txt
plans/: code_review_report.md  compilation_fix_plan.md  ems_fix_implementation_plan.md  ems_logic_review.md  timer_counter_explanation.md
release/s3/: README.md
release/s3/20260211_102410/: MANIFEST.txt  (+1 more)
release/s3_compile_essentials/: README.txt
release/s3_compile_essentials/firmware/s3/components/engine_control/: CMakeLists.txt
release/s3_compile_essentials/firmware/s3/components/engine_control/include/: fuel_calc.h  ignition_timing.h  ledc_injection.h  safety_monitor.h  sync.h  table_16x16.h
release/s3_compile_essentials/firmware/s3/components/engine_control/src/: config_manager.c  ledc_injection.c  mcpwm_ignition.c  mcpwm_injection.c
release/s3_compile_essentials/firmware/s3/components/engine_control/src/control/: engine_control.c  fuel_injection.c  ignition_timing.c  lambda_pid.c
tools/: BUILD.md  BUILD_INSTRUCTIONS.md  build.bat  build_all.bat  build_all.ps1  idf_config.h  menuconfig.bat  release_s3.ps1
tools/s3_jitter_sim/: CMakeLists.txt  README.md
(+38 files in other folders)
