idf_component_register(
    SRCS
        "src/control/engine_control.c"
        "src/control/fuel_injection.c"
        "src/control/ignition_timing.c"
        "src/control/fuel_calc.c"
        "src/control/lambda_pid.c"
        "src/control/table_16x16.c"
        "src/control/map_storage.c"
        "src/logger.c"
        "src/sensor_processing.c"
        "src/sync.c"
        "src/config_manager.c"
        "src/ledc_injection.c"
        "src/mcpwm_injection.c"
        "src/mcpwm_ignition.c"
        "src/safety_monitor.c"
        "src/twai_lambda.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_timer
        esp_hw_support
        esp_adc
        esp_driver_gptimer
        esp_driver_gpio
        esp_driver_mcpwm
        esp_driver_pcnt
        freertos
        driver
        esp_system
        nvs_flash
)

# Add compilation flags
target_compile_options(${COMPONENT_LIB} PRIVATE
    -O2
    -ffast-math
    -funroll-loops
    -Wno-unused-function
)
